# toys

SoftRender_opengl/: SoftRender.sln
SoftRender_opengl/SoftRender/: SoftRender.cpp  SoftRender.vcxproj  SoftRender.vcxproj.filters  camera.cpp  camera.h  cube - backup.plg  cube.plg  draw.cpp  draw.h  light.cpp  light.h  material.cpp  material.h  modelloader.cpp  modelloader.h  primitive.cpp  primitive.h  stdafx.h  transform.cpp  transform.h  utils.cpp  utils.h
cjson/: CMakeLists.txt  cjson.c  cjson.h  test.c
lisp/: MakeCLib.sh  Makefile  builtin_func.c  builtin_func.h  builtin_func_map.h  cfunc.c  lex.yy.c  lisp.l  lisp.y  lisp_malloc.h  lispy.c  lispy.h  parse.c  repl.c  t.lisp  t.lisp.tmp  test_lisp.c
lisp/lib/: Makefile  alloc.c  alloc.h  hash_func.c  hash_func.h  map.c  map.h  test_alloc.c  test_map.c
minipascal/: .main.c.swp  Makefile  README.md  error.c  global.h  lex.yy.c  main.c  pascal.l  pascal.tab.c  pascal.tab.h  pascal.y  test.pas  utils.c  utils.h
minipascal/sample/: simple.pas
raytracer/: CMakeLists.txt  README.md  cmp.py
raytracer/src/: boundingbox.cpp  boundingbox.h  camera.cpp  camera.h  const.h  main.cpp  material.h  primitive.cpp  primitive.h  primitivefactory.h  ray.h  scene.cpp  scene.h  surface.cpp  surface.h  tracer.cpp  tracer.h
